Using Java8 Base64 encoding instead of Sun classes